# Task3_URC_NiweshSah

./: README.md
Real_life_aruco/: Real_Life_Aruco_Generator.py  real_life_aruco_detection.py
marker_0/meshes/: marker_0.dae
src/camera_xacro/: CMakeLists.txt  package.xml
src/camera_xacro/materials/: wall_texture.material
src/camera_xacro/scripts/: aruco_detector.py
src/camera_xacro/urdf/: aruco_tag.urdf  aruco_tag2.urdf.xacro  camera.xacro
src/turtlebot3_simulations/global_planner/: CMakeLists.txt  package.xml
src/turtlebot3_simulations/global_planner/plugins/: global_planner.cpp  global_planner.h
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_aruco_world.launch  turtlebot3_empty_world.launch  turtlebot3_world.launch
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_world/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/src/: aruco_world.world
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: aruco_world.world  empty.world  turtlebot3_world.world
